# xdflow

./: .gitignore  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: development.md  index.md  installation.md  llms.txt
docs/api/: README.md  composition.md  core.md  cv.md  index.md  transforms.md  tuning.md  utils.md
docs/concepts/: composition.md  data_contract.md  execution.md  index.md  tuning.md
docs/guides/: llm.md  writing-cross-validators.md  writing-transforms.md
docs/javascript/: readthedocs.js
docs/tutorials/: README.md  basic-pipeline.md  basic_tutorial.ipynb  index.md  quickstart.md  reusable-ml-patterns.md  synthetic_lfp.py  tuning.md
examples/: quickstart.py
tests/: conftest.py
tests/composite/: test_ensemble.py  test_ensemble_transform.py  test_group_apply_transform.py  test_pipeline.py  test_pipeline_cloning.py  test_switch_transform.py
tests/core/: test_data_container.py
tests/cv/: test_cross_validator_intertrial.py  test_cross_validator_scoring.py  test_regression_support.py  test_sklearn_adapter.py
tests/examples/: test_quickstart.py
tests/transforms/: test_basic_transforms.py  test_cleaning.py  test_domain_adaptation_attrs.py  test_lgbm_predictor.py  test_multi_target_regression.py  test_normalization.py  test_pca.py  test_predict_changes.py  test_predictor_api_contracts.py  test_sklearn_wrappers.py  test_spectral.py  test_transform_immutability.py
tests/tuning/: test_tuner_finalize.py  test_tuner_multi_target.py  test_tuner_recursion.py
tests/utils/: test_inspection.py  test_multi_output_wrapper.py  test_target_utils.py  test_visualizations.py
xdflow/: __init__.py
xdflow/composite/: __init__.py  base.py  ensemble.py  group_apply.py  pipeline.py  switch_transform.py  transform_union.py
xdflow/core/: __init__.py  base.py  data_container.py
xdflow/cv/: __init__.py  base.py  domain.py  kfold.py  leave_group_out.py  sklearn_adapter.py
xdflow/transforms/: __init__.py  adapt_wrapper.py  basic_transforms.py  cleaning.py  domain_adaptation.py  lda.py  lgbm_predictor.py  multi_output_wrapper.py  nearestcentroid.py  normalization.py  pca.py  phase.py  sklearn_transform.py  spatial.py  spectral.py  zca.py
xdflow/tuning/: __init__.py  base.py  tuner_utils.py
xdflow/utils/: __init__.py  cache_utils.py  inspection.py  sample_weights.py  sampling.py  spectral.py  target_utils.py  visualizations.py
