[project]
name = "xdflow"
version = "0.1.0"
description = "Dimension-aware ML pipelines for scientific data"
authors = [
    {name = "Julien Bloch", email = "julien@canaery.com"},
    {name = "Joanna Chang", email = "joanna@canaery.com"},
]
readme = "README.md" 
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = [
    "machine-learning",
    "xarray",
    "pipelines",
    "scientific-computing",
    "dimension-aware",
    "neuroscience",
    "time-series",
    "cross-validation",
    "hyperparameter-tuning"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

# Core dependencies
dependencies = [
    "xarray>=2023.1.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.6.0",
    "scipy>=1.10.0",
    "joblib>=1.3.0",
]

[project.optional-dependencies]
# Gradient boosting
lightgbm = ["lightgbm>=4.0.0"]

# Hyperparameter tuning
tuning = [
    "optuna>=3.0.0",
    "optuna-integration>=4.1.0"
]

# Experiment tracking
mlflow = ["mlflow>=2.0.0"]

# Visualization
viz = [
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
]

# Spectral analysis
spectral = [
    "nitime>=0.10",
    "spectral-connectivity>=2,<3"
]

# Domain adaptation
adaptation = ["adapt>=0.4.0"]

# All extras
all = [
    "lightgbm>=4.0.0",
    "optuna>=3.0.0",
    "optuna-integration>=4.1.0",
    "mlflow>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.14.0",
    "nitime>=0.10",
    "spectral-connectivity>=2,<3",
    "adapt>=0.4.0",
    "netcdf4",
]

# Development dependencies
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
]

# Documentation dependencies
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.23.0",
    "netcdf4",
]

[project.urls]
Homepage = "https://github.com/canaery/xdflow"
Documentation = "https://xdflow.readthedocs.io"
Repository = "https://github.com/canaery/xdflow"
"Bug Tracker" = "https://github.com/canaery/xdflow/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xdflow"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "N803",  # allow uppercase argument names (scientific notation: N, X, etc.)
    "N806",  # allow uppercase variable names (scientific notation: N, X, etc.)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    'tests/',
    'examples/',
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--tb=short",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
]
filterwarnings = [
    "ignore::UserWarning:xdflow",
    "ignore:X does not have valid feature names:UserWarning:sklearn",
    "ignore:The filesystem tracking backend:FutureWarning:mlflow",
]
